// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Expenses summary with 1 expense 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpensesSummary
    expenseCount={1}
    expensesTotal={1000}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="content-container"
      >
        <h1
          className="page-header__title"
        >
          Viendo 
          <span>
            1
          </span>
           
          gasto
           con un total de 
          <span>
            $1,000
          </span>
        </h1>
        <div
          className="page-header__actions"
        >
          <Link
            className="button"
            replace={false}
            to="/create"
          >
            Nuevo Gasto
          </Link>
        </div>
      </div>,
      "className": "page-header",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="page-header__title"
          >
            Viendo 
            <span>
              1
            </span>
             
            gasto
             con un total de 
            <span>
              $1,000
            </span>
          </h1>,
          <div
            className="page-header__actions"
          >
            <Link
              className="button"
              replace={false}
              to="/create"
            >
              Nuevo Gasto
            </Link>
          </div>,
        ],
        "className": "content-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Viendo ",
              <span>
                1
              </span>,
              " ",
              "gasto",
              " con un total de ",
              <span>
                $1,000
              </span>,
            ],
            "className": "page-header__title",
          },
          "ref": null,
          "rendered": Array [
            "Viendo ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": 1,
              },
              "ref": null,
              "rendered": 1,
              "type": "span",
            },
            " ",
            "gasto",
            " con un total de ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "$1,000",
              },
              "ref": null,
              "rendered": "$1,000",
              "type": "span",
            },
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Link
              className="button"
              replace={false}
              to="/create"
            >
              Nuevo Gasto
            </Link>,
            "className": "page-header__actions",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Nuevo Gasto",
              "className": "button",
              "replace": false,
              "to": "/create",
            },
            "ref": null,
            "rendered": "Nuevo Gasto",
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="content-container"
        >
          <h1
            className="page-header__title"
          >
            Viendo 
            <span>
              1
            </span>
             
            gasto
             con un total de 
            <span>
              $1,000
            </span>
          </h1>
          <div
            className="page-header__actions"
          >
            <Link
              className="button"
              replace={false}
              to="/create"
            >
              Nuevo Gasto
            </Link>
          </div>
        </div>,
        "className": "page-header",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h1
              className="page-header__title"
            >
              Viendo 
              <span>
                1
              </span>
               
              gasto
               con un total de 
              <span>
                $1,000
              </span>
            </h1>,
            <div
              className="page-header__actions"
            >
              <Link
                className="button"
                replace={false}
                to="/create"
              >
                Nuevo Gasto
              </Link>
            </div>,
          ],
          "className": "content-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Viendo ",
                <span>
                  1
                </span>,
                " ",
                "gasto",
                " con un total de ",
                <span>
                  $1,000
                </span>,
              ],
              "className": "page-header__title",
            },
            "ref": null,
            "rendered": Array [
              "Viendo ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": 1,
                },
                "ref": null,
                "rendered": 1,
                "type": "span",
              },
              " ",
              "gasto",
              " con un total de ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "$1,000",
                },
                "ref": null,
                "rendered": "$1,000",
                "type": "span",
              },
            ],
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="button"
                replace={false}
                to="/create"
              >
                Nuevo Gasto
              </Link>,
              "className": "page-header__actions",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Nuevo Gasto",
                "className": "button",
                "replace": false,
                "to": "/create",
              },
              "ref": null,
              "rendered": "Nuevo Gasto",
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Should render ExpensesSummary with multiple expense 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpensesSummary
    expenseCount={2}
    expensesTotal={1000}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="content-container"
      >
        <h1
          className="page-header__title"
        >
          Viendo 
          <span>
            2
          </span>
           
          gastos
           con un total de 
          <span>
            $1,000
          </span>
        </h1>
        <div
          className="page-header__actions"
        >
          <Link
            className="button"
            replace={false}
            to="/create"
          >
            Nuevo Gasto
          </Link>
        </div>
      </div>,
      "className": "page-header",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="page-header__title"
          >
            Viendo 
            <span>
              2
            </span>
             
            gastos
             con un total de 
            <span>
              $1,000
            </span>
          </h1>,
          <div
            className="page-header__actions"
          >
            <Link
              className="button"
              replace={false}
              to="/create"
            >
              Nuevo Gasto
            </Link>
          </div>,
        ],
        "className": "content-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Viendo ",
              <span>
                2
              </span>,
              " ",
              "gastos",
              " con un total de ",
              <span>
                $1,000
              </span>,
            ],
            "className": "page-header__title",
          },
          "ref": null,
          "rendered": Array [
            "Viendo ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": 2,
              },
              "ref": null,
              "rendered": 2,
              "type": "span",
            },
            " ",
            "gastos",
            " con un total de ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "$1,000",
              },
              "ref": null,
              "rendered": "$1,000",
              "type": "span",
            },
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Link
              className="button"
              replace={false}
              to="/create"
            >
              Nuevo Gasto
            </Link>,
            "className": "page-header__actions",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Nuevo Gasto",
              "className": "button",
              "replace": false,
              "to": "/create",
            },
            "ref": null,
            "rendered": "Nuevo Gasto",
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="content-container"
        >
          <h1
            className="page-header__title"
          >
            Viendo 
            <span>
              2
            </span>
             
            gastos
             con un total de 
            <span>
              $1,000
            </span>
          </h1>
          <div
            className="page-header__actions"
          >
            <Link
              className="button"
              replace={false}
              to="/create"
            >
              Nuevo Gasto
            </Link>
          </div>
        </div>,
        "className": "page-header",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h1
              className="page-header__title"
            >
              Viendo 
              <span>
                2
              </span>
               
              gastos
               con un total de 
              <span>
                $1,000
              </span>
            </h1>,
            <div
              className="page-header__actions"
            >
              <Link
                className="button"
                replace={false}
                to="/create"
              >
                Nuevo Gasto
              </Link>
            </div>,
          ],
          "className": "content-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Viendo ",
                <span>
                  2
                </span>,
                " ",
                "gastos",
                " con un total de ",
                <span>
                  $1,000
                </span>,
              ],
              "className": "page-header__title",
            },
            "ref": null,
            "rendered": Array [
              "Viendo ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": 2,
                },
                "ref": null,
                "rendered": 2,
                "type": "span",
              },
              " ",
              "gastos",
              " con un total de ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "$1,000",
                },
                "ref": null,
                "rendered": "$1,000",
                "type": "span",
              },
            ],
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="button"
                replace={false}
                to="/create"
              >
                Nuevo Gasto
              </Link>,
              "className": "page-header__actions",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Nuevo Gasto",
                "className": "button",
                "replace": false,
                "to": "/create",
              },
              "ref": null,
              "rendered": "Nuevo Gasto",
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
